[package]
name = "pcan-basic"
version = "1.0.1"
description = "Rust wrapper around the PCAN-basic API by PEAK"
keywords = ["can", "pcan", "peak", "bacis", "api"]
categories = []
edition = "2021"

license = "MIT/Apache-2.0"
homepage = "https://github.com/tsabelmann/pcan-basic"
documentation = "https://docs.rs/pcan-basic"
repository = "https://github.com/tsabelmann/pcan-basic"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcan-basic-sys = {git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}

#[package.metadata.docs.rs]
#default-target = "x86_64-pc-windows-msvc"
#targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]